syntax = "proto3";

package robotShelfer;

service RobotShelfer {
    rpc RobotDriveToShelf (RobotDrive) returns (DriveResult);
    rpc RobotTakeBox (Robot) returns (RobotTake);
    rpc RobotLocation (Robot) returns (Location);
    rpc FreeRobot (Empty) returns (FreeResult);
    rpc DepositBox (Robot) returns (DriveResult);

}

message Empty {}

message RobotDrive {
    double robotID = 1;
    double productID = 2;
}


message DriveResult {
    string result = 1;
}

message RobotTake {
    string result = 1;
}


message Robot {
    double robotID = 1;
}

message Location {
    string robotLocation = 1;
}

message FreeResult {
    string FreeResult = 1;
}

message OneFree {
    string result = 1;
}